samples/_failures_safe/1761044691_d325f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8bd9c45.c: In function ‘main’:
./samples/SAFE/__tmp_d8bd9c45.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
